[project]
name = "cvm-sentry"
version = "0.1.0"
description = ""
authors = [
    {name = "Clair Delafuente",email = "clair@nixlabs.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rel (>=0.4.9.21,<0.5.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "imagehash (>=4.3.2,<5.0.0)",
    "ollama (>=0.6.0,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false